profiling-using-exp-runner/backup_FINAL_RESULTS/permutation_experiment/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: generate_permutations, input size: (1, 2, 3, 4, 5)
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.permutation as module; input_tuple = (1, 2, 3, 4, 5); module.generate_permutations(input_tuple); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.336073303222657 for 0.22933613 sec of execution.
